<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/habit_create_bg"
    android:backgroundTint="@color/reflection_bg"
    android:paddingTop="40dp"
    android:paddingHorizontal="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Would you like to go into more detail?"
        android:textColor="@color/reflection_feeling_title"
        android:textStyle="bold"
        android:layout_marginVertical="10dp"
        android:textSize="30sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="I feel..."
        android:textStyle="bold"
        android:paddingHorizontal="10dp"
        android:textColor="@color/reflection_feeling_I_feel_font"
        android:layout_marginTop="20dp"
        android:textSize="28sp"/>

    <GridLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/gridLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:columnCount="3">


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/proud"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_feeling_bg_dark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/foggy"
            android:textStyle="bold"
            android:textSize="15.5sp"

            android:textColor="@color/reflection_feeling_bg_dark_font" />


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_feeling_bg_dark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/peaceful"
            android:textStyle="bold"
            android:textSize="15.5sp"
            android:textColor="@color/white" />


    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_feeling_bg_dark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/euphoric"
            android:textStyle="bold"
            android:textSize="15.5sp"
            android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_feeling_bg_dark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/sad"
            android:textStyle="bold"
            android:textSize="15.5sp"
            android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_feeling_bg_dark"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/happy"
            android:textStyle="bold"
            android:textSize="15.5sp"
            android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/moody"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/helpless"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />


    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/anxious"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/grateful"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/loved"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/angry"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/calm"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/creative"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/distracted"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/motivated"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/insecure"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_columnWeight="1"
        android:layout_margin="4dp"
        android:background="@drawable/rounded_background_2"
        android:backgroundTint="@color/reflection_feeling_bg_dark"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/nostalgic"
        android:textStyle="bold"
        android:textSize="15.5sp"
        android:textColor="@color/reflection_feeling_bg_dark_font" />



    <!-- Repeat for additional items -->

</GridLayout>



    </LinearLayout>