<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/reflection_bg"
    android:background="@drawable/habit_create_bg"
    android:paddingTop="30dp"
    android:paddingHorizontal="20dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:background="@drawable/pattern_1"
        android:backgroundTint="@color/reflection_bg_pattern"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:paddingEnd="15dp"
            android:layout_height="0dp"
            android:layout_weight="0.5">

            <TextView
                android:id="@+id/currentDate"
                android:layout_alignParentStart="true"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingHorizontal="5dp"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:text="November 11, 2024"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_marginBottom="20dp"
                android:textSize="23sp" />

            <ImageView
                android:id="@+id/closeBtn"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/close"
                android:layout_centerVertical="true"
                app:tint="@color/start_reflection_page1_close_btn"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.2"
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:orientation="vertical"
            android:background="@drawable/rounded_background_2"
            android:backgroundTint="@color/reflection_quote_bg">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/reflectionQuote"
                android:text="Every action of our lives touches on some chords that will vibrate in eternity."
                android:textColor="@color/reflection_quote_font"
                android:textSize="18sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="italic"
                android:textSize="16sp"
                android:id="@+id/reflectionQuoteAuthor"
                android:layout_marginTop="15dp"
                android:textColor="@color/reflection_quote_author_font"
                android:text="~Edwin Chapin"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5"
            android:padding="12dp"
            android:layout_marginVertical="8dp"
            android:background="@drawable/background_border_white"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="How are you feeling?"
                android:textSize="22sp"
                android:layout_marginTop="10dp"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/terribleLayout"
                    android:contentDescription="@string/terrible"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="1"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mood1"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/mehLayout"
                    android:contentDescription="@string/meh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="2"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mood2"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/normalLayout"
                    android:contentDescription="@string/normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="3"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mood3"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/goodLayout"
                    android:contentDescription="@string/good"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mood4"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/awesomeLayout"
                    android:contentDescription="@string/awesome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="5"
                        android:textSize="20sp"
                        android:layout_gravity="center_horizontal"
                        android:textColor="@color/white"
                        android:textStyle="bold"/>

                    <ImageView
                        android:layout_width="40dp"
                        android:layout_height="40dp"
                        android:layout_margin="10dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/mood5"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>
    </LinearLayout>

</LinearLayout>